<resources>
    <string name="app_name">SkyMeet</string>
    <string name="skymeet">SkyMeet</string>
    <string name="share_code">Share Code</string>
    <string name="follow">Follow</string>
    <string name="create_an_unique_random_code_to_generate_conference_room_and_share_the_code_to_initiate_meeting">Create an unique random code to generate conference room and share the code to initiate meeting.</string>
    <string name="enter_code">Enter Code</string>
    <string name="create_join">Create/Join</string>
    <string name="hello">Hello!</string>
    <string name="guest_mode">Guest Mode</string>
    <string name="back_to">Back to</string>
    <string name="jitsi_open_source_multi_platform">Jitsi Open Source Multi-platform</string>
    <string name="powered_by">Powered by</string>
    <string name="developed_by">Developed by</string>
    <string name="nilabh_nayan_borthakur">Nilabh Nayan Borthakur</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email_id">Email ID</string>
    <string name="skymeet_conference">SkyMeet Conference</string>
    <string name="full_name">Full Name</string>
    <string name="sign_in_question">Sign In?</string>
    <string name="sign_up">Sign Up</string>
    <string name="skymeet_info">SkyMeet is a free Open Source Android Application solely developed by Er. Nilabh Nayan Borthakur and few friends from college for testing as an experimental project. SkyMeet uses Google Firebase for User-ID authentication and Firestore as a Database for storing User\'s data(Name and Email currently) without compromising security protocols and the integration of video conferencing room is based upon the Open Source Jitsi Multiplatform developed by Emil Ivov, Ph.D., in the year 2003. SkyMeet will easily handle 30 to 35 participants without any glitch, however it\'s maximum participants in one room is 100(not tested yet). SkyMeet offers multiple features like chat and poll section, screen sharing, attending meeting in low bandwidth, stream video and many more. Meeting Room is fully encrypted and completely secure along with other customizable security features. We are planning to bring more features in the coming days.</string>
    <string name="share_app">SHARE APP</string>
    <string name="hi_user">Hi User</string>
    <string name="welcome_to_skymeet">Welcome to SkyMeet!!!</string>
    <string name="rate_now">RATE NOW</string>
    <string name="if_you_liked_or_amazed_by_what_we_have_created_you_can_fetch_me_a_cup_of_coffee">If you liked or amazed by what we have created, you can fetch me a cup of coffee</string>
    <string name="at">at</string>
    <string name="gpay_upi_id">borthakur.nilabh@oksbi</string>
    <string name="connect_with_the_developer">Connect with the developer:</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>