<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuestInfoActivity">


    <TextView
        android:id="@+id/hiUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/akaya_telivigala"
        android:textSize="16sp"
        android:text="@string/hi_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/welcome_to_skymeet"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136" />

    <TextView
        android:id="@+id/shareApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_share_24"
        android:drawablePadding="3dp"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/share_app"
        android:textColor="#05B7A5"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.589" />

    <TextView
        android:id="@+id/rateNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_baseline_rate_star_24"
        android:drawablePadding="3dp"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/rate_now"
        android:textColor="#05B7A5"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/shareApp"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.589" />

    <TextView
        android:id="@+id/skymeetInfotv"
        android:layout_width="357dp"
        android:layout_height="320dp"
        android:fontFamily="@font/akaya_telivigala"
        android:gravity="center"
        android:text="@string/skymeet_info"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="355dp"
        android:layout_height="38dp"
        android:fontFamily="@font/akaya_telivigala"
        android:gravity="center"
        android:text="@string/if_you_liked_or_amazed_by_what_we_have_created_you_can_fetch_me_a_cup_of_coffee"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skymeetInfotv"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/at"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/upiID"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/gpay_upi_id"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.005" />

    <ImageView
        android:id="@+id/gpay"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginRight="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/upiID"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/g_pay" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.747"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/skymeetInfotv"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/coffee_cup" />

    <ImageView
        android:id="@+id/copytxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCopyClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toEndOf="@+id/upiID"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.004"
        app:srcCompat="@drawable/ic_baseline_content_copy_24" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/connect_with_the_developer"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upiID"
        app:layout_constraintVertical_bias="0.254" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="171dp"
        android:layout_height="38dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/facebook"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:srcCompat="@drawable/facebook_logo" />

        <ImageView
            android:id="@+id/linkedin"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="30dp"
            app:srcCompat="@drawable/linkedin_logo" />

        <ImageView
            android:id="@+id/instagram"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="30dp"
            app:srcCompat="@drawable/instagram_logo" />

        <ImageView
            android:id="@+id/github"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="30dp"
            app:srcCompat="@drawable/github_logo" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>